@@ -3,6 +3,7 @@ Denora v1.5.0-git
 -------------
 
 Additions
+12/06/12 Added channelmode +R to scarynet
 12/04/20 Added country lookup for servers to support #46@magirc
 11/04/22 r432 Added parameter support for !stats and !gstats
 11/02/12 r423 Added support for accounts on Charybdis at burst
@@ -21,6 +22,7 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+12/06/12 Fixed topichandler for scarynet protocol
 12/04/06 [1] Fixed geoipupd script breaking geoip (#1406)
 12/03/31 Fixed grammar errors (#1260)
 12/02/05 r436 Fixed ADMIN ADD command ignoring supplied host mask
